--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
         <div class="progress">
             <h3> web design <span>90%</span> </h3>
             <div class="bar bar-1-1"><span></span></div>
-            <h3> graphic design <span>75%</span> </h3>
-            <div class="bar bar-1-2"><span></span></div>
+<!--             <h3> graphic design <span>75%</span> </h3>
+            <div class="bar bar-1-2"><span></span></div> -->
             <h3> UI/UX design <span>80%</span> </h3>
             <div class="bar bar-1-3"><span></span></div>
         </div>
