--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="content">
         <h3>Muhammad Saim</h3>
         <p>i am a Full Stack developer</p>
-        <a href="saim_resume.pdf" class="btn">download CV</a>
+        <a href="saim cv.pdf" class="btn">download CV</a>
     </div>
 
     <div class="share">
